Fix #3159: Query for Calendar isn't using End Date. Submitted by: aram
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3769 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -405,8 +405,8 @@ this_user_name_does_not_exist = This user name does not exist in the database
 
 a_user_has_entered_data_for_subject_min = The {1} event completed sooner than expected for subject {0}
 a_user_has_entered_data_for_subject_max = The {1} event completed later than expected for subject {0}
-data_has_enteret_too_early_in_the_calendar = Event was completed earlier than expected.
-data_has_enteret_too_late_in_the_calendaror = Event was completed later than expected.
+calendaredVisit.eventCompletedEarlierThenExpected = Event was completed earlier than expected.
+calendaredVisit.eventCompletedLaterThenExpected = Event was completed later than expected.
 
 daymax_greate_or_equal_dayschedule = Day Max should be greater than or equal to Day Schedule
 daymin_less_or_equal_dayschedule = Day Min should be less or equal than Day Schedule
