--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_es_MX.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_es_MX.properties
@@ -602,8 +602,8 @@ a_user_has_entered_data_for_subject_min = La actividad {1} se complet\u00F3 ante
 
 a_user_has_entered_data_for_subject_max = La actividad {1} se complet\u00F3 despu\u00E9s de lo esperado para el sujeto {0}
 
-data_has_enteret_too_early_in_the_calendar = La actividad se complet\u00F3 antes de lo esperado.
-data_has_enteret_too_late_in_the_calendaror = La actividad se complet\u00F3 despu\u00E9s de lo esperado.
+calendaredVisit.eventCompletedEarlierThenExpected = La actividad se complet\u00F3 antes de lo esperado.
+calendaredVisit.eventCompletedLaterThenExpected = La actividad se complet\u00F3 despu\u00E9s de lo esperado.
 
 
 daymax_greate_or_equal_dayschedule = El D\u00EDa M\u00E1ximo debe ser igual o mayor que el D\u00EDa Programado
