--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_ru.properties
@@ -628,12 +628,12 @@ a_user_has_entered_data_for_subject_min = \u0414\u043b\u044f \u043f\u0430\u0446\
 #a_user_has_entered_data_for_subject_max =  The {1} event completed later than expected for subject {0}
 #a_user_has_entered_data_for_subject_max = Для пациента  {0} событие  {1} закончилось позже, чем ожидалось
 a_user_has_entered_data_for_subject_max = \u0414\u043b\u044f \u043f\u0430\u0446\u0438\u0435\u043d\u0442\u0430  {0} \u0441\u043e\u0431\u044b\u0442\u0438\u0435  {1} \u0437\u0430\u043a\u043e\u043d\u0447\u0438\u043b\u043e\u0441\u044c \u043f\u043e\u0437\u0436\u0435\u002c \u0447\u0435\u043c \u043e\u0436\u0438\u0434\u0430\u043b\u043e\u0441\u044c
-#data_has_enteret_too_early_in_the_calendar =  Event was completed earlier than expected.
-#data_has_enteret_too_early_in_the_calendar = Событие завершилось раньше, чем ожидалось
-data_has_enteret_too_early_in_the_calendar = \u0421\u043e\u0431\u044b\u0442\u0438\u0435 \u0437\u0430\u0432\u0435\u0440\u0448\u0438\u043b\u043e\u0441\u044c \u0440\u0430\u043d\u044c\u0448\u0435\u002c \u0447\u0435\u043c \u043e\u0436\u0438\u0434\u0430\u043b\u043e\u0441\u044c
-#data_has_enteret_too_late_in_the_calendaror =  Event was completed later than expected.
-#data_has_enteret_too_late_in_the_calendaror = Событие завершилось позже,  чем ожидалось
-data_has_enteret_too_late_in_the_calendaror = \u0421\u043e\u0431\u044b\u0442\u0438\u0435 \u0437\u0430\u0432\u0435\u0440\u0448\u0438\u043b\u043e\u0441\u044c \u043f\u043e\u0437\u0436\u0435\u002c  \u0447\u0435\u043c \u043e\u0436\u0438\u0434\u0430\u043b\u043e\u0441\u044c
+#calendaredVisit.eventCompletedEarlierThenExpected =  Event was completed earlier than expected.
+#calendaredVisit.eventCompletedEarlierThenExpected = Событие завершилось раньше, чем ожидалось
+calendaredVisit.eventCompletedEarlierThenExpected = \u0421\u043e\u0431\u044b\u0442\u0438\u0435 \u0437\u0430\u0432\u0435\u0440\u0448\u0438\u043b\u043e\u0441\u044c \u0440\u0430\u043d\u044c\u0448\u0435\u002c \u0447\u0435\u043c \u043e\u0436\u0438\u0434\u0430\u043b\u043e\u0441\u044c
+#calendaredVisit.eventCompletedLaterThenExpected =  Event was completed later than expected.
+#calendaredVisit.eventCompletedLaterThenExpected = Событие завершилось позже,  чем ожидалось
+calendaredVisit.eventCompletedLaterThenExpected = \u0421\u043e\u0431\u044b\u0442\u0438\u0435 \u0437\u0430\u0432\u0435\u0440\u0448\u0438\u043b\u043e\u0441\u044c \u043f\u043e\u0437\u0436\u0435\u002c  \u0447\u0435\u043c \u043e\u0436\u0438\u0434\u0430\u043b\u043e\u0441\u044c
 #daymax_greate_or_equal_dayschedule =  Day Max should be greater than or equal to Day Schedule
 #daymax_greate_or_equal_dayschedule = Максимальное количество дней должно быть больше или равно периоду расписания
 daymax_greate_or_equal_dayschedule = \u041c\u0430\u043a\u0441\u0438\u043c\u0430\u043b\u044c\u043d\u043e\u0435 \u043a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e \u0434\u043d\u0435\u0439 \u0434\u043e\u043b\u0436\u043d\u043e \u0431\u044b\u0442\u044c \u0431\u043e\u043b\u044c\u0448\u0435 \u0438\u043b\u0438 \u0440\u0430\u0432\u043d\u043e \u043f\u0435\u0440\u0438\u043e\u0434\u0443 \u0440\u0430\u0441\u043f\u0438\u0441\u0430\u043d\u0438\u044f
