--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_zh.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_zh.properties
@@ -610,12 +610,12 @@ a_user_has_entered_data_for_subject_min	=	\u4e3b\u9898 {0}\u4e2d\u7684\u4e8b\u4e
 #a_user_has_entered_data_for_subject_max	=	The {1} event completed later than expected for subject {0}
 #a_user_has_entered_data_for_subject_max	=	ä¸»é¢˜ {0}ä¸­çš„ äº‹ä»¶{1}æ¯”é¢„æœŸæ™šå®Œæˆ
 a_user_has_entered_data_for_subject_max	=	\u4e3b\u9898 {0}\u4e2d\u7684\u4e8b\u4ef6{1}\u6bd4\u9884\u671f\u665a\u5b8c\u6210
-#data_has_enteret_too_early_in_the_calendar	=	Event was completed earlier than expected.
-#data_has_enteret_too_early_in_the_calendar	=	äº‹ä»¶å®Œæˆæ¯”é¢„æœŸæ—©å®Œæˆã€‚
-data_has_enteret_too_early_in_the_calendar	=	\u4e8b\u4ef6\u5b8c\u6210\u6bd4\u9884\u671f\u65e9\u5b8c\u6210\u3002
-#data_has_enteret_too_late_in_the_calendaror	=	Event was completed later than expected.
-#data_has_enteret_too_late_in_the_calendaror	=	äº‹ä»¶æ¯”é¢„æœŸæ™šå®Œæˆ
-data_has_enteret_too_late_in_the_calendaror	=	\u4e8b\u4ef6\u6bd4\u9884\u671f\u665a\u5b8c\u6210
+#calendaredVisit.eventCompletedEarlierThenExpected	=	Event was completed earlier than expected.
+#calendaredVisit.eventCompletedEarlierThenExpected	=	äº‹ä»¶å®Œæˆæ¯”é¢„æœŸæ—©å®Œæˆã€‚
+calendaredVisit.eventCompletedEarlierThenExpected	=	\u4e8b\u4ef6\u5b8c\u6210\u6bd4\u9884\u671f\u65e9\u5b8c\u6210\u3002
+#calendaredVisit.eventCompletedLaterThenExpected	=	Event was completed later than expected.
+#calendaredVisit.eventCompletedLaterThenExpected	=	äº‹ä»¶æ¯”é¢„æœŸæ™šå®Œæˆ
+calendaredVisit.eventCompletedLaterThenExpected	=	\u4e8b\u4ef6\u6bd4\u9884\u671f\u665a\u5b8c\u6210
 #daymax_greate_or_equal_dayschedule	=	Day Max should be greater than or equal to Day Schedule
 #daymax_greate_or_equal_dayschedule	=	æœ€å¤§æ—¥åº”å¤§äºŽæˆ–ç­‰äºŽæ¯å¤©æ—¥ç¨‹å®‰æŽ’
 daymax_greate_or_equal_dayschedule	=	\u6700\u5927\u65e5\u5e94\u5927\u4e8e\u6216\u7b49\u4e8e\u6bcf\u5929\u65e5\u7a0b\u5b89\u6392
