Fix #3172: Email Service update: Request Password. Submitted by: denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3797 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4252,8 +4252,8 @@ email_status.FALSE = Failed
 
 email_action.RESET_PASSWORD = Reset password for user
 email_action.CASEBOOK_GENERATED = Casebook generated
+email_action.REQUEST_PASSWORD = New password request
 
 resend_email_tooltip = Resend this email.
-
 view_email_log_details = View Email Log Details
 email_log_details = Email Log Details
