Fix #3122: Implement "Resend Email" action in the Email Log table. Submitted by: denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3803 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4257,3 +4257,11 @@ email_action.REQUEST_PASSWORD = New password request
 resend_email_tooltip = Resend this email.
 view_email_log_details = View Email Log Details
 email_log_details = Email Log Details
+
+resend_email_admin_message = This email was not sent using the default Administrator's email address in the System Properties. Please select one of the options below to attempt sending this email again.
+resend_original_sender = Resend using the original sender
+resend_admin_email = Resend using the Admin email address as the sender
+resend = Resend
+resend_attempts = Resend attempts
+resend_attempt_started = Your resend attempt has been started. Results of the attempt will be shown on "View Details" page.
+ok = Ok
